@@ -1,3 +1,6 @@
+- rpmdrake
+  o fix registering orphan package (#51229)
+
 Version 5.19 - 1 October 2009, Thierry Vignaud
 
 - gurpmi.addmedia
